Fixes after merge from internal repo